# lumen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
apps/cloud/: README.md
apps/desktop/: README.md  pnpm-lock.yaml
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs
apps/web/: 404.html  README.md  _headers  _redirects  demo.js  index.html  netlify.toml  robots.txt  sitemap.xml  vercel.json  wrangler.toml
crates/lumen-ai/: Cargo.toml
crates/lumen-ai-experimental/: Cargo.toml
crates/lumen-ai-experimental/src/: error.rs  lib.rs  registry.rs  session.rs  tensor.rs
crates/lumen-ai/src/: error.rs  lib.rs  session.rs  tensor.rs
crates/lumen-ai/test-models/: README.md
crates/lumen-api/: Cargo.toml
crates/lumen-api/examples/: invert.lua
crates/lumen-api/src/: lib.rs
crates/lumen-audio/: Cargo.toml
crates/lumen-audio/src/: io.rs  lib.rs  loudness.rs  nr.rs
crates/lumen-auth/: Cargo.toml
crates/lumen-auth/src/: lib.rs
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: auto.rs  batch.rs  case.rs  clarify.rs  colorize.rs  lib.rs  main.rs  operator.rs  presets.rs  project.rs  report.rs  serve.rs  serve_index.html  smart.rs  sr.rs  stack.rs  video_pipeline.rs
crates/lumen-collab/: Cargo.toml
crates/lumen-collab/src/: lib.rs
crates/lumen-color/: Cargo.toml
crates/lumen-color/src/: lib.rs
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: asset.rs  color.rs  context.rs  effect.rs  error.rs  frame.rs  graph.rs  lib.rs  params.rs  project.rs  registry.rs  scheduler.rs  time.rs
crates/lumen-export/: Cargo.toml
crates/lumen-export/src/: encoder.rs  lib.rs
crates/lumen-fx-ai/: Cargo.toml
crates/lumen-fx-ai/src/: lib.rs
crates/lumen-fx-color/: Cargo.toml
crates/lumen-fx-color/src/: curves.rs  duotone.rs  lib.rs  lut3d.rs  primary_wheels.rs  saturation.rs
crates/lumen-fx-compression/: Cargo.toml
crates/lumen-fx-compression/src/: deblock.rs  lib.rs
crates/lumen-fx-deblur/: Cargo.toml
crates/lumen-fx-deblur/src/: laplacian.rs  lib.rs  richardson_lucy.rs  wiener.rs
crates/lumen-fx-denoise/: Cargo.toml
crates/lumen-fx-denoise/src/: bilateral.rs  gaussian.rs  lib.rs  median.rs
crates/lumen-fx-exposure/: Cargo.toml
crates/lumen-fx-exposure/src/: brightness_contrast.rs  gamma.rs  lib.rs
crates/lumen-fx-face/: Cargo.toml
crates/lumen-fx-face/src/: lib.rs  skin_smooth.rs
crates/lumen-fx-geometric/: Cargo.toml
crates/lumen-fx-geometric/src/: crop.rs  lib.rs  resize.rs  rotate.rs
crates/lumen-fx-mask/: Cargo.toml
crates/lumen-fx-mask/src/: alpha_polygon.rs  alpha_rect.rs  lib.rs
crates/lumen-fx-modalities/: Cargo.toml
crates/lumen-fx-modalities/src/: channel_isolate.rs  lib.rs
crates/lumen-fx-sharpen/: Cargo.toml
crates/lumen-fx-sharpen/src/: lib.rs  unsharp_mask.rs
crates/lumen-fx-stabilize/: Cargo.toml
crates/lumen-fx-stabilize/src/: lib.rs  translate.rs
crates/lumen-fx-temporal/: Cargo.toml
crates/lumen-fx-temporal/src/: lib.rs  motion_blur.rs
crates/lumen-fx-text/: Cargo.toml
crates/lumen-fx-text/src/: clahe.rs  lib.rs
crates/lumen-fx-upscale/: Cargo.toml
crates/lumen-fx-upscale/src/: bicubic.rs  catmull_rom.rs  lanczos.rs  lib.rs
crates/lumen-fx-weather/: Cargo.toml
crates/lumen-fx-weather/src/: dehaze.rs  lib.rs
crates/lumen-gpu/: Cargo.toml
crates/lumen-gpu/src/: lib.rs
crates/lumen-io/: Cargo.toml
crates/lumen-io/src/: avif.rs  hash.rs  heif.rs  jxl.rs  lib.rs  probe.rs  raw.rs  still.rs  video.rs
crates/lumen-measure/: Cargo.toml
crates/lumen-measure/src/: lib.rs  psnr.rs  ssim.rs
crates/lumen-perf/: Cargo.toml
crates/lumen-perf/src/: lib.rs
crates/lumen-platform/: Cargo.toml
crates/lumen-platform/src/: lib.rs
crates/lumen-playback/: Cargo.toml
crates/lumen-playback/src/: cache.rs  engine.rs  lib.rs
crates/lumen-qa/: Cargo.toml
crates/lumen-qa/src/: lib.rs
crates/lumen-report/: Cargo.toml
crates/lumen-report/src/: lib.rs
crates/lumen-server/: Cargo.toml
crates/lumen-server/src/: lib.rs  main.rs
crates/lumen-workflow/: Cargo.toml
crates/lumen-workflow/src/: lib.rs
docs/: ARCHITECTURE.md  DEPLOY.md  FEATURES.md  FEDERAL.md  FORENSIC.md  MODELS.md  PIPELINE.md  PLAN.md  ROADMAP.md
scripts/: gen_stubs.sh
