[package]
name = "lumen-ai"
description = "ONNX Runtime inference, model registry, hardware EP routing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
