[package]
name = "lumen-ai"
description = "ONNX inference (pure-Rust via tract), model session helpers, frame <-> tensor bridges"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
ndarray = { workspace = true }
tract-onnx = "0.21"

[dev-dependencies]
tempfile = "3"
