[package]
name = "lumen-api"
description = "Extensibility: plugin host, scripting (Lua/Python/JS), REST/GraphQL"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
parking_lot.workspace = true
