[package]
name = "lumen-audio"
description = "Audio enhancement: NR, EQ, loudness, restoration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
