[package]
name = "lumen-auth"
description = "Authentication & integrity: chain-of-custody, hashing, C2PA"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
