[package]
name = "lumen-cli"
description = "Command-line interface binary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"
