[package]
name = "lumen-cli"
description = "Lumen command-line interface binary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
lumen-io = { path = "../lumen-io" }
lumen-fx-exposure = { path = "../lumen-fx-exposure" }
lumen-fx-color = { path = "../lumen-fx-color" }
lumen-fx-sharpen = { path = "../lumen-fx-sharpen" }
lumen-fx-denoise = { path = "../lumen-fx-denoise" }
lumen-fx-geometric = { path = "../lumen-fx-geometric" }
lumen-fx-upscale = { path = "../lumen-fx-upscale" }
lumen-fx-mask = { path = "../lumen-fx-mask" }
lumen-fx-stabilize = { path = "../lumen-fx-stabilize" }
lumen-fx-deblur = { path = "../lumen-fx-deblur" }
lumen-fx-temporal = { path = "../lumen-fx-temporal" }
lumen-fx-weather = { path = "../lumen-fx-weather" }
lumen-fx-compression = { path = "../lumen-fx-compression" }
lumen-fx-face = { path = "../lumen-fx-face" }
lumen-fx-text = { path = "../lumen-fx-text" }
lumen-fx-modalities = { path = "../lumen-fx-modalities" }
lumen-measure = { path = "../lumen-measure" }
lumen-audio = { path = "../lumen-audio" }
lumen-auth = { path = "../lumen-auth" }
lumen-report = { path = "../lumen-report" }
lumen-export = { path = "../lumen-export" }
lumen-api = { path = "../lumen-api" }
lumen-qa = { path = "../lumen-qa" }
tokio.workspace = true
axum.workspace = true
time = { workspace = true }
rayon.workspace = true
ed25519-dalek = "2"
zip = "2"
uuid = { workspace = true }
blake3 = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
tempfile = "3.13"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.13"

[[bin]]
name = "cli"
path = "src/main.rs"
