[package]
name = "lumen-fx-deblur"
description = "Deblurring, deconvolution, motion-blur removal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
