[package]
name = "lumen-fx-modalities"
description = "Multi-spectral, IR, UV, polarization, stereo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
