[package]
name = "lumen-fx-upscale"
description = "Super-resolution, AI upscaling, classical resamplers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
