[package]
name = "lumen-fx-weather"
description = "Atmospheric: dehaze, derain, defog, glare, smoke"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
