[package]
name = "lumen-gpu"
description = "wgpu compute kernels and render pipelines (Vulkan/Metal/DX12/WebGPU)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
