[package]
name = "lumen-io"
description = "Input/output: still images now (image crate); FFmpeg, RAW, HEIF/AVIF/JXL come in later milestones"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
image = { workspace = true, features = ["png", "jpeg", "tiff", "webp", "bmp"] }
blake3.workspace = true

[dev-dependencies]
tempfile = "3.13"
