[package]
name = "lumen-measure"
description = "Measurement & analysis: scopes, metrics (PSNR/SSIM/VMAF/LPIPS)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
