[package]
name = "lumen-perf"
description = "Performance & hardware: GPU/CPU scheduling, memory, telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
wgpu = "22"
pollster = "0.3"
bytemuck = { workspace = true }
parking_lot = { workspace = true }
