[package]
name = "lumen-playback"
description = "Playback engine: scrubbing, frame cache, A/B compare, timecode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
