[package]
name = "lumen-qa"
description = "QA & monitoring: golden frames, fuzz, regression, telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
lumen-io = { path = "../lumen-io" }
lumen-measure = { path = "../lumen-measure" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
lumen-fx-exposure = { path = "../lumen-fx-exposure" }
