[package]
name = "lumen-report"
description = "Reporting / visualization / presentation builders"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumen-core = { path = "../lumen-core" }
thiserror.workspace = true
tracing.workspace = true
time = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3.13"
